<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SupportActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_blue_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.1" />

            <TextView
                android:id="@+id/malum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="40dp"
                android:gravity="center"
                android:text="This application helps you to translate English words into Uzbek\n\nThanks for choosing Us"
                android:textColor="@color/darkBlue"
                android:textSize="16sp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo" />

            <LinearLayout
                android:id="@+id/lina"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="20dp"
                android:background="@color/blue"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/malum" />


            <TextView
                android:id="@+id/contactUs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/connect_with_us"
                android:textColor="@color/darkBlue"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lina" />


            <LinearLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/contactUs">

                <ImageView
                    android:id="@+id/email_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_blue_email" />

                <TextView
                    android:id="@+id/email_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/with_email"
                    android:textColor="@color/darkBlue"
                    android:textSize="18sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/lina1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/blue"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/email" />

            <LinearLayout
                android:id="@+id/telegram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/email">

                <ImageView
                    android:id="@+id/telegram_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_blue_telegram" />

                <TextView
                    android:id="@+id/telegram_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/telegram"
                    android:textColor="@color/darkBlue"
                    android:textSize="18sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/lina2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/blue"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/telegram" />

            <LinearLayout
                android:id="@+id/instagram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/telegram">

                <ImageView
                    android:id="@+id/instagram_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:padding="1dp"
                    android:src="@drawable/ic_blue_instagram" />

                <TextView
                    android:id="@+id/instagram_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/instagram"
                    android:textColor="@color/darkBlue"
                    android:textSize="18sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/lina3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/blue"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/instagram" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>